--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- This script uses esm.sh/run to transpile TSX directly in the browser for GitHub Pages -->
+    <script type="module">
+        import "https://esm.sh/run";
+    </script>
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
 </body>
 </html>
