--- a/index.html
+++ b/index.html
@@ -12,41 +12,50 @@
         body {
             font-family: 'Quicksand', sans-serif;
             background-color: #f0f9ff;
-            overflow-x: hidden;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
-        .font-brand {
+        .font-brand { font-family: 'Fredoka', sans-serif; }
+        #root:empty::before {
+            content: "🚀 Launching Math Explorer... Please wait.";
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
             font-family: 'Fredoka', sans-serif;
+            font-size: 1.5rem;
+            color: #0ea5e9;
+            animation: pulse 2s infinite;
         }
-        @keyframes float {
-            0% { transform: translateY(0px) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(5deg); }
-            100% { transform: translateY(0px) rotate(0deg); }
-        }
-        .animate-float {
-            animation: float 6s ease-in-out infinite;
-        }
-        .animate-float-delayed {
-            animation: float 8s ease-in-out infinite;
-            animation-delay: 2s;
+        @keyframes pulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.5; }
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <!-- This script uses esm.sh/run to transpile TSX directly in the browser for GitHub Pages -->
-    <script type="module">
-        import "https://esm.sh/run";
+    
+    <!-- This library handles the TSX -> JS conversion in the browser -->
+    <script type="module" src="https://esm.sh/run"></script>
+    
+    <!-- We use a relative path './' to ensure it works in subfolders like /Math-Tests/ -->
+    <script type="text/babel" data-type="module">
+        import "./index.tsx";
     </script>
-    <script type="text/babel" data-type="module" src="index.tsx"></script>
 </body>
 </html>
